--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Kamal el haddadi - web dev & media buyer</title>
     <link rel="shortcut icon" href="./asset/icon/Frame 3.svg" type="image/x-icon">
     <link rel="stylesheet" href="./asset/css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
@@ -24,34 +22,18 @@
         </div>
     </div>
     <section class="container">
-        <div class="sub-container">
             <div class="line-One">
-                <h1>Hey, I'm kamal el-haddadi hello</h1>
-                <!-- <img src="/asset/img/Profile.png" style="width: 55px" alt="" /> -->
-                <!-- <h1>kamal el-haddadi</h1> -->
-            </div>
-            <div class="line-tow">
-                <h1>a front end web developer at  <span>????</span></h1>
-                <!-- <img src="/asset/img/testimonial-1.jpg" style="width: 55px" alt="" /> -->
-                <!-- <h1>????</h1> -->
-            </div>
-            <div class="line-three">
+                <h1>Hey, I'm kamal el-haddadi</h1>
+                <h1>a front end web developer</h1>
                 <h1>Based in Morocco, Tangier</h1>
-                <!-- <div style="position: relative; display: inline-block;">
-                    <img src="/asset/img/Mapin.png" style="width: 55px;" alt="Tangier Map" />
-                    <div class="hero-map-indicator-dot"></div>
-                    <div class="hero-map-indicator-pulse"></div>
-                </div> -->
-                <!-- <h1>Tangier</h1> -->
             </div>
-        </div>
         <nav class="containerdot nav-social-link">
             <div class="social-link">
                 <ul>
-                    <li class="nav-link" id="github"><a href="#">Github</a></li>
-                    <li class="nav-link" id="linkedin"><a href="#">Linkedin</a></li>
-                    <li class="nav-link" id="twitter"><a href="#">Twitter</a></li>
-                    <li class="nav-link" id="resume"><a href="/asset/pages/playground.html">Resume</a></li>
+                    <li class="nav-link" id="github"><a href="https://github.com/kamalel-haddadi" target="_blank">Github</a></li>
+                    <li class="nav-link" id="linkedin"><a href="https://www.linkedin.com/in/kamal-el-haddadi-3863502a4/" target="_blank">Linkedin</a></li>
+                    <li class="nav-link" id="twitter"><a href="https://www.instagram.com/kamal_elhaddadi/?hl=en" target="_blank">Instagram</a></li>
+                    <li class="nav-link" id="resume"><a href="/asset/img/F.W.D_ Kamal El-haddadi.pdf" target="_blank">Resume</a></li>
                 </ul>
             </div>
         </nav>
@@ -62,7 +44,7 @@
         </div>
         <div class="profile-desc">
             <p>For over a decade, I've been immersed in frontend web development, crafting captivating digital experiences.</p>
-            <p> rom sleek interfaces to seamless interactions, I'm dedicated to transforming designs into living websites. </p>
+            <p>From sleek interfaces to seamless interactions, I'm dedicated to transforming designs into living websites. </p>
             <p>Fueled by curiosity, I constantly refine my skills, ensuring every project shines with digital brilliance.</p>
         </div>
         <div class="container-dot">
@@ -70,111 +52,91 @@
             <span class="dote-st">.</span>
             <span class="dote-st">.</span>
         </div>
-        <div class="portfolio">
+        <div class="usedTools">
             <h2>Old clients, new friends.</h2>
             <div class="cards">
-                <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/html.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                <div class="card-item hover-button" >
+                    <img class="Hover-img" src="./asset/img/html.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>Html5</span>
+                        <span class="span2">Advanced, 9/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/css.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/css.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>CSS3</span>
+                        <span class="span2">Advanced, 8.5/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/js.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/js.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>JavaScript</span>
+                        <span class="span2">Beginner, 5/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/wordpress.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/wordpress.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>WordPress</span>
+                        <span class="span2">Intermediate, 8/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img framer" src="./asset/img/framer-color-icon 1.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img framer" src="./asset/img/framer.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>Framer</span>
+                        <span class="span2">Novice, ../10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/figma-original.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/figma.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>Figam</span>
+                        <span class="span2">Intermediate, 7/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/php-plain.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/php.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>PHP</span>
+                        <span class="span2">Beginner, 5/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/c-plain.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/csharp.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>C#.NET & C</span>
+                        <span class="span2">Intermediate, 7/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/csharp.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/mysql.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>MySql</span>
+                        <span class="span2">Beginner, 6/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/mysql-original-wordmark.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/adsnager.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>Facebook Ads manager</span>
+                        <span class="span2">Professional, 9/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/microsoftsqlserver-plain.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/git-plain.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>Git</span>
+                        <span class="span2">Intermediate, 7/10</span>
                     </div>
                 </div>
                 <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/git-plain.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
+                    <img class="Hover-img" src="./asset/img/github.svg" alt="">
                     <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
-                    </div>
-                </div>
-                <div class="card-item hover-button">
-                    <img class="Hover-img" src="./asset/img/github.png" alt="">
-                    <span class="button-icon"><ion-icon name="arrow-redo-outline" style="color: rgb(71.95% 71.95% 71.95%);"></ion-icon></span>
-                    <div id="toolTrip-text">
-                        <span>Kamal is pro</span>
-                        <span class="span2">kamal el haddadi Tangier</span>
+                        <span>Github</span>
+                        <span class="span2">Beginner, 5/10</span>
                     </div>
                 </div>
             </div>
@@ -219,31 +181,34 @@
             <h2>Education</h2>
             <div class="wrraper-list">
                 <div class="work-list">
-                    <div class="toStart">
                         <h3 class="duration">2022 - 2024</h3>
-                    </div>
-                    <div>
                         <p>Computer development specialist</p>
-                    </div>
                 </div>
                 <div class="work-list">
-                    <div class="toStart">
                         <h3 class="duration">2021 - EN COURS</h3>
-                    </div>
-                    <div>
                         <p>Abdelmalek essaadi University. Faculty of Economics</p>
-                    </div>
                 </div>
                 <div class="work-list">
-                    <div class="toStart">
                         <h3 class="duration">2020 - 2021</h3>
-                    </div>
-                    <div>
                         <p>Bachelor's degree in service section - Accounting stream</p>
-                    </div>
                 </div>
-                
-
+            </div>
+        </div>
+        <div class="container-dot">
+            <span class="dote-st">.</span>
+            <span class="dote-st">.</span>
+            <span class="dote-st">.</span>
+        </div>
+        <div class="Call-ToAction">
+            <div class="cta-content">
+                <h1>Let’s Make Something Together Start a Conversation</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, consequatur!</p>
+                <button class="button">
+                    <a href="tel:+2120777605104">Let's make a call</a>
+                </button>
+            </div>
+            <div class="img">
+                <img src="" alt="">
             </div>
         </div>
         <div class="container-dot">
@@ -264,13 +229,20 @@
             <ul>
                 <li><a href="#">About</a></li>
                 <span class="foot-span">.</span>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="/asset/pages/portfolio.html">Portfolio</a></li>
                 <span class="foot-span">.</span>
                 <li><a href="#">Blog</a></li>
                 <span class="dash">|</span>
-                <li><a href="#">Contact</a></li>
+                <li><a class="active" href="mailto:kamal.el.haddaadi@gmail.com">Contact</a></li>
             </ul>
         </footer>
+        <nav class="Navbar-liec">
+            <ul>
+                <li><a href="#">© 2024 Lue Studio</a></li>
+                <li><a href="#"><img src="/asset/icon/Frame 3.svg" width="50px" alt=""></a></li>
+                <li><a href="#">Made with love</a></li>
+            </ul>
+        </nav>
     </section>
     <div class="bluer-footer">
         <div class="blur-footer">
@@ -283,17 +255,6 @@
     </div>
 
     <script src="/asset/js/main.js"></script>
-        <!--
-    - ionicon link
-  -->
-  <script
-  type="module"
-  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-></script>
-<script
-  nomodule
-  src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-></script>
 </body>
 
 </html>
